--- a/HTML/HTML05-Links/HTML05-ExercicioCasa/index.html
+++ b/HTML/HTML05-Links/HTML05-ExercicioCasa/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercicio Casa</title>
 </head>
 <body>
-
-    <h1>Lukas da Mota Souza</h1>
-    <dl>
-        <dd>Sou Lukas wfiohwofhio</dd>
-    </dl>
     
 </body>
 </html>
