--- a/HTML/HTML07-Form/HTML-exerciciosCasa/index.html
+++ b/HTML/HTML07-Form/HTML-exerciciosCasa/index.html
@@ -76,7 +76,7 @@
             <option value="">Pato Guerreiro</option>
             <option value="">Pato Man</option>
             <option value="">Pato Life</option>
-            <option value="">Pato Pombo</option>
+            <option value="">Pato Pomb</option>
             <option value="">Pato Sauro</option>
             <option value="">Pato Mago</option>
             <option value="">Pato Rich</option>
