--- a/Exercicio_casa/index.html
+++ b/Exercicio_casa/index.html
@@ -10,7 +10,9 @@
     <main>
 
         <title class="title">Squid Game</title>
+        <br>
         <p>“Centenas de competidores sem dinheiro aceitam um convite para competir em jogos infantis por um prêmio tentador, mas as apostas são mortais”</p>
+        <br><br>
         <lo class="lo">
             <div class="li">
 
@@ -21,9 +23,9 @@
                 <li>O resgate do soldado Ryan</li>
                 <li>A procura da Felicidade</li>
             </div>
-        </lo>
-        <img class="img" src="./squidGame.jpg" alt="">
-    </main>
+        </lo><br><br><br>
+        <img  src="./squidGame.jpg" alt="" class="img">
+    </main><br><br><br><br>
     <footer>
         <div class="footer">Lukas da Mota &copy; 2024</div>
     </footer>
