--- a/CSS/css07-pseudo/index.html
+++ b/CSS/css07-pseudo/index.html
@@ -19,5 +19,13 @@
         <li>teste3</li>
         <li>teste4</li>
     </ul>
+
+    <p id="P2">Aqui Existe um Texto</p>
+
+<p class="P3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quis atque neque reiciendis natus eaque labore ab officiis aperiam incidunt laboriosam voluptatem praesentium, cupiditate doloribus harum accusamus? Sequi, suscipit minima.</p>
+
+<p class="P3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab modi labore aliquam laudantium adipisci fugiat, necessitatibus animi vel libero, voluptatibus consequatur exercitationem perferendis rem corrupti atque! Ad, nobis. Accusamus, cumque?</p>
+
+<p class="P3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam labore voluptate dolores quod consequuntur numquam nisi quis quibusdam, quos doloribus suscipit voluptates aut ab voluptas? Minus ad provident similique itaque?</p>
 </body>
 </html>
