--- a/CSS/CSS06-Float/CSS06-ExercicioCasa/Veloses-E-Furiosos.html
+++ b/CSS/CSS06-Float/CSS06-ExercicioCasa/Veloses-E-Furiosos.html
@@ -1,81 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=[device-width], initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Exercício casa</title>
 </head>
 
 <body>
-    <img src="./comeco.png" alt="" id="comeco">
+    <div class="container">
+        <header>
+            <img id="imgtitulo" src="./2fast2furious.jpg">
+            <h1 id="titulo1">Home Proximo</h1>
+        </header>
 
-    <a href="index.html">HOME PROXIMO</a>
+        <div class="images">
+            <figure class="FF1">
+                <img src="./torettoebraian.webp" alt="Dois homens em um carro">
+                <figcaption>Velozes e Furiosos (2001)</figcaption>
+            </figure>
+            <p>A spate of high-speed robberies in LA brings street racer Dominic Toretto and his crew under the LAPD
+                scanner. FBI agent Brian goes undercover and befriends Toretto in a bid to investigate the matter.
+                Release date: September 28, 2001 (Brazil)
+                Director: Rob Cohen
+                Music by: BT
+                Box office: 207.3 million USD
+                Story by: Gary Scott Thompson
+                Distributed by: Universal Pictures</p>
+        </div>
 
-    <main>
+        <div class="images">
+            <figure class="MFMF">
+                <img src="./tocheidefome.avif" alt="Dois homens em frente a um carro">
+                <figcaption>Mais Velozes e Mais Furiosos (2003)</figcaption>
+            </figure>
+            <p>Brian, a former officer, partners with Roman Pierce, his ex-convict friend. As a part of a deal with
+                the FBI, Brian and Roman have to bring down Verone, a drug lord, to erase their criminal record.
+                Release date: June 12, 2003 (Brazil)
+                Director: John Singleton
+                Box office: $236.4 million
+                Story by: Gary Scott Thompson; Michael Brandt; Derek Haas
+                Distributed by: Universal Pictures
+                Produced by: Neal H. Moritz</p>
+        </div>
+
+        <div class="images">
+            <figure class="FFT">
+                <img src="./DK.jpg" alt="Um homem de origem asiatica com uma jaqueta">
+                <figcaption>Velozes e Furiosos: Desafio em Tóquio (2006)</figcaption>
+            </figure>
+            <p>In order to avoid jail time, an errant car racer is sent to live with his father in Tokyo. However,
+                he finds himself in trouble once again when he becomes a major competitor in drifting.
+                Release date: August 11, 2006 (Brazil)
+                Director: Justin Lin
+                Featured song: Tokyo Drift (Fast & Furious)
+                Box office: $158.9 million
+                Production companies: Universal Pictures; Relativity Media; Original Film
+                Distributed by: Universal Pictures, Relativity Media</p>
+        </div>
+
+        <div class="images">
+            <figure class="FF4">
+                <img src="./fast4.jpg" alt="">
+                <figcaption>Velozes e Furiosos 4 (2009)</figcaption>
+            </figure>
+            <figure class="FF5">
+                <img src="./thisisbrazil.jpg" alt="">
+                <figcaption>Velozes e Furiosos 5: Operação Rio (2011)</figcaption>
+            </figure>
+            <p>Orçamento: US$ 85 milhões; Bilheteria: US$ 363 milhões;</p>
+            <p>Originalmente, Velozes e Furiosos 5 previa gravar na ponte Rio-Niterói onde já haviam autorização para realizarem as gravações, também com cenas de velocidade na orla de Copacabana e filmagens na Lapa, essa seria uma espécie de festa onde os mocinhos e os vilões estariam em uma noite da cidade maravilhosa</p>
+        </div>
 
         <div>
-            <figure id="cima">
-                <img src="vf1.png" alt="" class="imagensdocard">
-                <figcaption>VELOZES E FURIOSOS 2001</figcaption>
-            </figure>
-            <p>Brian O'Conner é um policial que se infiltra no submundo dos rachas de rua para investigar uma série de
-                furtos. Enquanto tenta ganhar o respeito e a confiança do líder Dom Toretto, ele corre o risco de ser
-                desmascarado.</p>
+            <h3>Ordem de Lançamento de Velozes e Furiosos</h3>
+            <ol>
+                <li>Velozes e Furiosos (2001)</li>
+                <li>Mais Velozes e Mais Furiosos (2003) </li>
+                <li>Velozes e Furiosos: Desafio em Tóquio (2006)</li>
+                <li>Velozes e Furiosos 4 (2009) </li>
+                <li>Velozes e Furiosos 5: Operação Rio (2011) </li>
+                <li>Velozes e Furiosos 6 (2013)</li>
+                <li>Velozes e Furiosos 7 (2015) </li>
+                <li>Velozes e Furiosos 8 (2017) </li>
+                <li>Velozes e Furiosos: Hobbs & Shaw (2019) </li>
+                <li>Velozes e Furiosos 9 (2021)</li>
+            </ol>
         </div>
-
-        <div id="div2">
-            <figure id="esquerda">
-                <img src="fv2.png" alt="" class="imagensdocard">
-                <figcaption>VELOZES E FURIOSOS 2003</figcaption>
-            </figure>
-            <p>O ex-policial Brian O'Conner se muda de Los Angeles para Miami para recomeçar sua vida. Ele acaba se envolvendo em rachas na sua nova cidade com seu amigo Tej e Suki. Suas aventuras terminam quando ele é preso e faz um acordo com agentes do FBI. Brian tem a missão muito perigosa de prender um poderoso chefe do cartel das drogas.</p>
-        </div>
-
-        <div>
-            <figure id="direita">
-                <img src="vf3.png" alt="" class="imagensdocard">
-                <figcaption>VELOZES E FURIOSOS 2006</figcaption>
-            </figure>
-            <p>Sean Boswell é um piloto de rua que desafia seu rival e bate o carro no fim da corrida. Ele decide se mudar para o Japão para evitar a prisão nos Estados Unidos, já que os rachas não são nada populares com as autoridades. Em Tóquio, ele começa a aprender um excitante e perigoso estilo novo </p>
-        </div>
-
-
-        <div>
-            <figure class="img1">
-                <img src="./vf4.png" alt="">
-                <figcaption>VELOZES E FURIOSOS 2009</figcaption>
-            </figure>
-            <figure class="img1" id="img2">
-                <img src="./vf5.png" alt="">
-                <figcaption>VELOZES E FURIOSOS 2011</figcaption>
-            </figure>
-
-            <p> Desde que o ex-policial Brian O'Conner e Mia Toretto libertaram Dom da prisão, eles viajam pelo mundo para fugir das autoridades. No Rio de Janeiro, eles são obrigados a fazer um último trabalho antes de ganhar sua liberdade definitiva. Sean Boswell é um piloto de rua que desafia seu rival e bate o carro no fim da corrida. Ele decide se mudar para o Japão para evitar a prisão nos Estados Unidos, já que os rachas não são nada populares com as autoridades. Em Tóquio, ele começa a aprender um excitante e perigoso estilo novo de compe </p>
-
-        </div>
-
     </main>
 
-    <h2>Ordem cronológica do universo Velozes e Furiosos</h2>
-    <ol>
-        <li> Velozes e Furiosos (2001) </li>
-        <li> + Velozes + Furiosos (2003) </li>
-        <li> Velozes e Furiosos 4 (2009) </li>
-        <li> Velozes e Furiosos 5: Operação Rio (2011)</li>
-        <li> Velozes e Furiosos 6 (2013) </li>
-        <li> Velozes e Furiosos: Desafio em Tóquio (2006) </li>
-        <li> Velozes e Furiosos 7 (2015)
-        </li>
-        <li>Velozes e Furiosos 8 (2017)</li>
-    </ol>
-
-    <footer> 
-        <h3>  2024 &copy; | Todos os direitos reservados | Lukas Mota</h3>
-      </footer>
+        <footer> 2024 &copy;| Todos os direitos reservados | Lukas da Mota Souza</footer>
+    </div>
 </body>
-
-
-
-</html>
