--- a/JS/JS14-API/index.html
+++ b/JS/JS14-API/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumindo uma API</title>
 </head>
+
 <body>
+
+
+    <div id="mostrarJSON" style="border: 1px solid black; width: 400px; height: 200px;"></div>
+
+    <div id="mostrarIMG" style="border: 1px solid black; width: 200px; height: 200px;"></div>
+
+    <button type="submit" onclick="DogAPI()">Dog Louco</button>
     <script src="main.js"></script>
 </body>
+
 </html>
